0132: tt04-raybox-zero harden_test.sh script for stats

--- a/0064-2023-04-21.md
+++ b/0064-2023-04-21.md
@@ -1,5 +1,9 @@
 # 21 Apr 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0063**-2023-04-18.md](./0063-2023-04-18.md) | [**0065**-2023-04-23.md](./0065-2023-04-23.md) |
+
 # Raybox update
 
 In [recent work](https://github.com/algofoogle/raybox/commit/138a6f11c9c9c25a5d4c855d1e9f2d345dadee60)
