--- a/0065-2023-04-23.md
+++ b/0065-2023-04-23.md
@@ -1,5 +1,9 @@
 # 23 Apr 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0064**-2023-04-21.md](./0064-2023-04-21.md) | [**0066**-2023-04-16.md](./0061-2023-04-16.md) |
+
 # Notes:
 
 *   Typedef (custom types) [can be done in SystemVerilog](https://fpgatutorial.com/systemverilog-typedef-enum-struct/) but not Verilog.
