--- a/0066-2023-04-26.md
+++ b/0066-2023-04-26.md
@@ -1,5 +1,8 @@
 # 26 Apr 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0065**-2023-04-23.md](./0065-2023-04-23.md) | [**0067**-2023-04-27.md](./0067-2023-04-27.md) |
 
 # Anton's Tiny Tapeout 3 (TT03) submission
 
