--- a/0067-2023-04-27.md
+++ b/0067-2023-04-27.md
@@ -1,5 +1,10 @@
 # 27 Apr 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0066**-2023-04-26.md](./0066-2023-04-26.md) | [**0068**-2023-04-28.md](./0068-2023-04-28.md) |
+
+
 # Setting up TT tools
 
 *   A chunk of the required setup is found in [yesterday's 0066 journal](./0066-2023-04-26.md#trying-to-run-tt-gds-builder-for-myself).
