--- a/0068-2023-04-28.md
+++ b/0068-2023-04-28.md
@@ -1,5 +1,9 @@
 # 28 Apr 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0067**-2023-04-27.md](./0067-2023-04-27.md) | [**0069**-2023-04-29.md](./0069-2023-04-29.md) |
+
 # Notes
 
 Need to learn how to do C++ debugging in VSCode on Linux. For more info, see:
