--- a/0131-2023-08-24.md
+++ b/0131-2023-08-24.md
@@ -2,7 +2,7 @@
 
 | Previous journal: | Next journal: |
 |-|-|
-| [**0130**-2023-08-23.md](./0130-2023-08-23.md) | *Next journal TBA* |
+| [**0130**-2023-08-23.md](./0130-2023-08-23.md) | [**0132**-2023-08-25.md](./0132-2023-08-25.md) |
 
 # raybox-zero: Improving the FSM
 
@@ -24,28 +24,12 @@
 
 NOTE: These results are numbered per the variations above (with 5..8 being for 8x2 tiles instead of 4x2).
 
-I got the stats from the results spat out by:
+To respectively get:
+*   cells_pre_abc, TotalCells, max speed
+*   logic cells
+*   utilisation and wires
 
-cells_pre_abc, TotalCells, max speed are obtained from:
-
-```bash
-summary.py --design . --run 0 --caravel --full-summary | egrep 'pre_abc|clock_freq|TotalCells'
-```
-
-Logic cells is from:
-
-```bash
-./tt/tt_tool.py --print-cell-category | fgrep 'total cells'
-```
-
-Utilisation and wires are from:
-
-```bash
-./tt/tt_tool.py --print-stats
-```
-
-All 3:
-
+...I run these 3:
 ```bash
 summary.py --design . --run 0 --caravel --full-summary | egrep 'pre_abc|clock_freq|TotalCells'
 ./tt/tt_tool.py --print-cell-category | fgrep 'total cells'
