Updates to 0133 re MPW8 VM setup

--- a/0060-2022-11-23.md
+++ b/0060-2022-11-23.md
@@ -1,5 +1,9 @@
 # 23 Nov 2022
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0059**-2022-04-02.md](./0059-2022-04-02.md) | [**0061**-2023-04-16.md](./0061-2023-04-16.md) |
+
 Stuff to remember and try doing soon:
 
 *   Put an index in [`README`](./README.md).
