--- a/0061-2023-04-16.md
+++ b/0061-2023-04-16.md
@@ -1,5 +1,9 @@
 # 16 Apr 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0060**-2022-11-23.md](./0060-2022-11-23.md) | [**0062**-2023-04-17.md](./0062-2023-04-17.md) |
+
 ## Things to do
 
 *   Get my website going again. Some of the things that become notes here could be articles at https://ammauro.com instead. I had done some work *somewhere* (maybe in a VM on my desktop computer, not yet committed??) on improving its presentation (modern HTML5/CSS, etc?) after [I upgraded it for newer Linux and Ruby platforms](https://github.com/algofoogle/anton.maurovic.com/commit/665db65476b093faa88d46f9e59b5996aeaec563).
