--- a/0062-2023-04-17.md
+++ b/0062-2023-04-17.md
@@ -1,5 +1,9 @@
 # 17 Apr 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0061**-2023-04-16.md](./0061-2023-04-16.md) | [**0063**-2023-04-18.md](./0063-2023-04-18.md) |
+
 # Raybox ideas
 
 *   We're going to need a hardware multiplier, I think, but can we get away without a hardware divider?
