--- a/0063-2023-04-18.md
+++ b/0063-2023-04-18.md
@@ -1,5 +1,10 @@
 # 18 Apr 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0062**-2023-04-17.md](./0062-2023-04-17.md) | [**0064**-2023-04-21.md](./0064-2023-04-21.md) |
+
+
 # More Raybox ideas
 
 *   [Division in Verilog](https://projectf.io/posts/division-in-verilog/) - Expect [Q8.8](https://en.wikipedia.org/wiki/Q_(number_format)) division to take 24 cycles.
