--- a/0067-2023-04-27.md
+++ b/0067-2023-04-27.md
@@ -31,5 +31,5 @@ OPENLANE_IMAGE_NAME=efabless/openlane:cb59d1f84deb5cedbb5b0a3e3f3b4129a967c988-a
 *   TT PDF headings bug (in TOC)
 *   PDF anchors?
 *   How does TT [ChipTune](https://tinytapeout.com/runs/tt03/001/) example work with its tricky scan chain hack??
-*   Need to find out how to acatually publish stuff to GitHub Pages.
+*   Need to find out how to actually publish stuff to GitHub Pages.
 *   Final number of sky130 standard cells required seems to be reported in `runs/wokwi/reports/synthesis/1-synthesis.AREA_0.stat.rpt`
