--- a/0133-2023-08-26.md
+++ b/0133-2023-08-26.md
@@ -6,6 +6,10 @@
 
 # Setting up MPW8 VM again on a new laptop
 
+NOTE: This is a complement to [0123](./0123-2023-08-14.md) where I set up my new laptop's Windows 11 host environment. The below deals with then getting the MPW8 Linux environment working with VirtualBox.
+
+## Import the VM
+
 1.  I installed VirtualBox 7.0.10 on a Windows 11 Home host with 32GB RAM and Core i9 CPU.
 2.  I downloaded the MPW8 VM again ([`Zero to ASIC Course MPW8.ova`](https://drive.google.com/file/d/1rxz_QN7uWsOruJFk83YJXVSSBzuuZgGk/view?usp=share_link)) per the [Zero to ASIC course instructions](https://course.zerotoasiccourse.com/mod/lesson/view.php?id=63&pageid=116).
 3.  The file is about 10GB (10,467,980,288 bytes), and its md5sum is `717755d5d9ed8990a26fe7ab51b9b971`
@@ -14,3 +18,72 @@
 6.  Below the scrollable config options set 'Machine Base Folder' also to `C:\VMs`. Keep all other settings (esp. NAT Network) as-is.
 7.  Click 'Finish'. It will take a few minutes to build.
 
+## Configure the VM
+
+1.  Increase Video Memory to 128MB.
+2.  Create a 'Shared Folder' for Windows 'Documents'. Name it `HOST_Documents` and turn on 'Auto-mount'
+3.  Boot the VM for the first time.
+4.  Maximise, then when ready click `zerotoasic` user and password is `12345`
+5.  Suppress VirtualBox notifications that appear on RHS.
+6.  Display may not auto-scale straight away (despite View => Auto-resize Guest Display being ticked on), so un-maximise and maximise again.
+7.  Go to Settings (either via arrow in top-right corner, or go to applications widget in bottom-left corner and search for and select 'Settings'). Set the following:
+    *   Privacy => Screen Lock: Set screen blanking to Never, turn off automatic screen lock, turn off 'Lock Screen on Suspend'.
+    *   Keyboard Shortcuts: Search for 'calc' and set 'Launch calculator' to Shift+Win+C (Shift+Super+C)
+    *   Universal Access: Set cursor size as you like
+    *   Users: 'Unlock' and turn on 'Automatic Login'
+    *   Date &amp; Time: 'Unlock' and set Time Zone to 'ACST (Adelaide, Australia)'.
+8.  Shut down the VM: Menu in top-right corner => Power Off.
+
+## Resize virtual disk
+
+NOTE: It's best to do this early on, especially because use of snapshots can make this [harder to do later](https://docs.google.com/spreadsheets/d/10W6RaZFFKiEBgWBWMpl-wNXEygXAUvypYUgx8fy_Z80/edit#gid=1364343794&range=C734:D754).
+
+1.  Back in VirtualBox, go to File => Tools => Virtual Media Manager
+2.  Select the VDI and click 'Properties', then type in a size of 200GB and click Apply.
+3.  Go back to the VM and boot it.
+4.  In booted VM, go to applications menu (bottom-left corner) and search for 'Disks'
+5.  Select the main drive and then select 'Extended Partition: Partition 2'
+6.  Click the settings cog and from the menu select 'Resize...'
+7.  Drag the slider all the way to the right, making the partition (hopefully) on the order of 200~214GB.
+8.  Click the 'Resize' button
+9.  Now 'Filesystem: Partition 5, 42 GB Ext4', and repeat the resize steps.
+10. At the end it should look something like this:
+    ![Main drive resized to use full 200GB](i/0133-resize-disk.png)
+11. Open a Terminal and run `df -h /` and it will hopefully show ~162GB free.
+
+## Snapshot
+
+1.  Power off the VM
+2.  Take a snapshot, 'MPW8 basic tweaks', optionally linking to what was done above.
+
+
+## Notes
+
+*   VM already has localhost:2522 forwarding for SSH to guest.
+
+## Next steps
+
+*   Snapshot.
+*   SSH key.
+*   Fix mousewheel.
+*   Git branch and set-title scripts.
+*   VSCode and extensions
+*   Helpers for launching OpenLane docker containers, e.g. per: https://github.com/algofoogle/journal/blob/master/0127-2023-08-20.md#going-into-the-updated-openlane-3bc9d02-docker-container
+*   Fix Docker ability to run OpenLane GUI: https://github.com/algofoogle/journal/blob/master/0083-2023-05-23.md#:~:text=Meanwhile%2C%20I%27m%20going%20to%20try%20inspecting%20my%20above%20failed%20run%20with%20the%20OpenROAD%20GUI%20as%20follows
+*   Configure extra OpenLane cores: https://github.com/algofoogle/journal/blob/master/0086-2023-05-26.md#notes
+*   Simulation stuff, esp. Verilator and SDL. Look at READMEs for my various HDL projects.
+*   Check: VirtualBox => System => Processor => Extended Features => 'Enable Nested VT-x/AMD-V' option is not available. Need to enable in laptop BIOS? Will not having this slow down docker?
+*   NOTE: 8 vCPUs are assigned to the VM, but the host's Core i9 has 24. Consider more? How to enable OpenLane multi-core anyway??
+*   Any benefit to turning on VirtualBox 'Enable 3D Acceleration'?
+*   Consider setting USB mode to 2.0 or 3.0 if we need actual USB passthrough.
+*   Stuff for TT04 local build
+*   Stuff for GDS-to-PNG
+*   RP2040 toolchain? https://github.com/algofoogle/journal/blob/master/0092-2023-06-08.md#raspberry-pi-pico-getting-started-with-arduino-libs-support, subsequent pages, minicom, `sudo adduser zerotoasic dialout
+`
+*   Matt Venn's recommended `~/.gtkwaverc` file for bigger traces/text and filled signals:
+    ```
+    fontname_signals Monospace 18
+    fontname_waves Monospace 18
+    splash_disable 1
+    fill_waveform 1
+    ```
