Update 0133 re VSCode

--- a/0133-2023-08-26.md
+++ b/0133-2023-08-26.md
@@ -214,8 +214,55 @@ This is written as a variation on [Hardening Tiny Tapeout Projects Locally]...
 
 1.  Power off the VM
 2.  Take a snapshot, 'Environment Helpers', optionally linking to what was done above.
+3.  Power the VM back on. Note that sometimes after updates like these, the VM may go thru extra startup routines and take longer to boot than usual. Hit <kbd>ESC</kbd> to see the boot log.
+
+## VSCode
+
+Based on [Visual Studio Code on Linux](https://code.visualstudio.com/docs/setup/linux):
+
+1.  Install with Snap: `sudo snap install --classic code`
+2.  Launch with: `code ~/anton/tt04-factory-test`
+3.  Install extensions:
+    *   [GitHub Markdown Preview](https://marketplace.visualstudio.com/items?itemName=bierner.github-markdown-preview) (search ID: `bierner.github-markdown-preview`) -- For previewing files as GFM.
+    *   C/C++: `ms-vscode.cpptools` -- Worry about doing the 'Get Started with C++ Development' walkthru later.
+    *   C/C++ Extension Pack: `ms-vscode.cpptools-extension-pack`
+    *   Tcl: `bitwisecook.tcl`
+    *   Python: `ms-python.python` -- Go thru 'Get Started with Python Development' later.
+    *   Verilog-HDL/SystemVerilog/Bluespec Systemverilog: `mshr-h.veriloghdl`
+    *   Hex Editor: `ms-vscode.hexeditor`
+    *   NOTE: These will include some extras, such as Pylance and CMake stuff.
+    *   NOTE: Optional extra: Makefile Tools: `ms-vscode.makefile-tools`
+
+## Test run
+
+1.  `cd ~/anton`
+2.  <kbd>CTRL+SHIFT+T</kbd> in Gnome Terminal to create 3 tabs. Name each of them (using `set-title`): `journal`, `raybox-zero`, `tt04-rbz`
+3.  In `journal`: `git clone git@github.com:algofoogle/journal && cd journal`
+4.  In `raybox-zero`: `git clone git@github.com:algofoogle/raybox-zero && cd raybox-zero`
+5.  In `tt04-rbz`:
+    1.  ```bash
+        git clone git@github.com:algofoogle/tt04-raybox-zero --recurse-submodules
+        cd tt04-raybox-zero
+        tt04env-bash
+    2.  ```bash
+        git clone -b tt04 https://github.com/TinyTapeout/tt-support-tools tt
+        ./tt/tt_tool.py --create-user-config
+        time ./tt/tt_tool.py --debug --harden
+        ```
+        It'll probably fail with the usual yosys-abc bug.
+    3.  I ran `time ./harden_test.sh` and it completed in about 48 minutes.
+6.  Shut down the VM and in VM settings assign it 16 cores.
+7.  When booting back up, I ran the laptop in 'performance' mode and added this to tt04-raybox-zero's `src/config.tcl`:
+    ```tcl
+    set ::env(ROUTING_CORES) 15
+    ```
+8.  Then, when running `time ./harden_test.sh` in completed in under 28 minutes.
 
 
+## Snapshot: VSCode ready
+
+1.  Power off the VM
+2.  Take a snapshot, 'VSCode ready', optionally linking to what was done above.
 
 
 ## Notes
@@ -226,19 +273,18 @@ This is written as a variation on [Hardening Tiny Tapeout Projects Locally]...
 
 ## Next steps
 
-*   VSCode and extensions, inc. [GitHub Markdown Preview for GFM](https://marketplace.visualstudio.com/items?itemName=bierner.github-markdown-preview) (ID `bierner.github-markdown-preview`)
-*   Stuff for GDS-to-PNG
 *   Simulation stuff, esp. Verilator and SDL. Look at READMEs for my various HDL projects.
 *   Fix Docker ability to run OpenLane GUI: https://github.com/algofoogle/journal/blob/master/0083-2023-05-23.md#:~:text=Meanwhile%2C%20I%27m%20going%20to%20try%20inspecting%20my%20above%20failed%20run%20with%20the%20OpenROAD%20GUI%20as%20follows
 *   Helpers for launching OpenLane docker containers, e.g. per: https://github.com/algofoogle/journal/blob/master/0127-2023-08-20.md#going-into-the-updated-openlane-3bc9d02-docker-container
 *   RP2040 toolchain? https://github.com/algofoogle/journal/blob/master/0092-2023-06-08.md#raspberry-pi-pico-getting-started-with-arduino-libs-support, subsequent pages, minicom, `sudo adduser zerotoasic dialout`
+
+## No need to worry about?
 
 *   Software Update?
 *   Check: VirtualBox => System => Processor => Extended Features => 'Enable Nested VT-x/AMD-V' option is not available. Need to enable in laptop BIOS? Will not having this slow down docker?
 *   NOTE: 8 vCPUs are assigned to the VM, but the host's Core i9 has 24. Consider more? How to enable OpenLane multi-core anyway??
 *   Any benefit to turning on VirtualBox 'Enable 3D Acceleration'?
 *   Consider setting USB mode to 2.0 or 3.0 if we need actual USB passthrough.
-
 *   PER PROJECT: Configure extra OpenLane cores: https://github.com/algofoogle/journal/blob/master/0086-2023-05-26.md#notes
 
 [Hardening Tiny Tapeout Projects Locally]: https://docs.google.com/document/d/1aUUZ1jthRpg4QURIIyzlOaPWlmQzr-jBn3wZipVUPt4/edit#heading=h.wwc5ldl01nl5
