0135: raybox-zero sim kb/mouse control

--- a/0057-2020-08-10.md
+++ b/0057-2020-08-10.md
@@ -1,5 +1,9 @@
 # 10 Aug 2020
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0056**-2020-08-09.md](./0056-2020-08-09.md) | [**0058**-2020-08-11.md](./0058-2020-08-11.md) |
+
 GT's [QSPIFLASHSIM](https://github.com/ZipCPU/s6soc/blob/master/sim/verilator/qspiflashsim.cpp) uses an approach where it [assumes a hard-coded clock (10nS period, so 100MHz)](https://github.com/ZipCPU/s6soc/blob/0d7b428abe5c9a02d86a0272e290baafae00f13f/sim/verilator/qspiflashsim.cpp#L59) and derives its other critical timing from that.
 *   It assumes that each tick (i.e. each call to [`operator()`](https://github.com/ZipCPU/s6soc/blob/0d7b428abe5c9a02d86a0272e290baafae00f13f/sim/verilator/qspiflashsim.cpp#L118)) will advance the clock by some known amount automatically.
 *   An example is where it [defines `tPP` to be 12 microseconds](https://github.com/ZipCPU/s6soc/blob/0d7b428abe5c9a02d86a0272e290baafae00f13f/sim/verilator/qspiflashsim.cpp#L67) (i.e. 12&times;100 "ticks" of 10nS each, hence 12,000nS or 12&micro;S), then [uses it to start a programming cycle](https://github.com/ZipCPU/s6soc/blob/0d7b428abe5c9a02d86a0272e290baafae00f13f/sim/verilator/qspiflashsim.cpp#L139), and finally [counts it down within each tick](https://github.com/ZipCPU/s6soc/blob/0d7b428abe5c9a02d86a0272e290baafae00f13f/sim/verilator/qspiflashsim.cpp#L123).
