--- a/0058-2020-08-11.md
+++ b/0058-2020-08-11.md
@@ -1,5 +1,9 @@
 # 11 Aug 2020
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0057**-2020-08-10.md](./0057-2020-08-10.md) | [**0059**-2022-04-02.md](./0059-2022-04-02.md) |
+
 So where to now? Maybe one of the following:
 
 1.  Get GT's vgasim working in macOS (or Linux X Windows) for completeness.
