--- a/0059-2022-04-02.md
+++ b/0059-2022-04-02.md
@@ -1,5 +1,10 @@
 # 2 Apr 2022
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0058**-2020-08-11.md](./0058-2020-08-11.md) | [**0060**-2022-11-23.md](./0060-2022-11-23.md) |
+
+
 A long time since my last entry.
 
 I was going to try [this tutorial](https://www.youtube.com/watch?v=Q7AOvWpIVHU&t=164s) on [Three.js](https://threejs.org/).
